Move version to .env

--- a/ansible/roles/docker-deploy/templates/.env.j2
+++ b/ansible/roles/docker-deploy/templates/.env.j2
@@ -1,3 +1,7 @@
+MONGO_VERSION={{ mongo_version }}
+API_VERSION={{ api_version }}
+APP_VERSION={{ app_version }}
+
 MONGO_URI={{ default_mongo_uri }}
 DB_NAME={{ default_db_name }}
 API_URL={{ default_api_url }}
